add `changeServerTags` endpoint
