# src/openapi.json
@@ -452,6 +452,62 @@
                 }
             }
         },
+        "/servers/{id}/tags": {
+            "parameters": [
+                {
+                    "$ref": "#/components/parameters/DiscordId"
+                }
+            ],
+            "patch": {
+                "tags": ["Server Management"],
+                "security": [{ "siteToken": [] }, { "siteToken": [], "rateLimitBypassToken": [] }],
+                "operationId": "changeServerTags",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "newTags": {
+                                        "$ref": "#/components/schemas/ServerTags"
+                                    }
+                                },
+                                "required": ["newTags"],
+                                "additionalProperties": false
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "The updated server.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Server"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "$ref": "#/components/responses/BadRequestError400"
+                    },
+                    "401": {
+                        "$ref": "#/components/responses/AuthError401"
+                    },
+                    "403": {
+                        "$ref": "#/components/responses/ForbiddenError403"
+                    },
+                    "404": {
+                        "$ref": "#/components/responses/NotFoundError404"
+                    },
+                    "429": {
+                        "$ref": "#/components/responses/RateLimited429"
+                    }
+                }
+            }
+        },
         "/search/servers": {
             "post": {
                 "tags": ["Registry"],
